<resources>
    <string name="app_name">Delhi Auto Meter</string>

    <string name="main">A live Auto meter that will show Kilometers travelled and Fare
        (calculated as per new rate as you keep travelling in an Auto.</string>
    <string name="action_settings">Settings</string>
    <string name="kilo_meters">0.0</string>
    <string name="old_fare">0.00</string>
    <string name="button_kilo">Calculate From Kilometers</string>
    <string name="button_old">Convert from old fare</string>
    <string name="new_Fare">New Fare Calculator</string>
    <string name="track">Track(Real Time)</string>
    <string name="title_activity_track">Track</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="close">CLOSE</string>
    <string name="distance">Distance  :</string>
    <string name="Fare">Fare      :</string>
    <string name="hello_world">Hello world!</string>
    <string name="track_out">0.0</string>
    <string name="ok">OK</string>
    <string name="speed">Speed :</string>
</resources>
