<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:text="@string/main"
        android:textColor="#ffcccccc" />

    <EditText
        android:id="@+id/kilometers"
        style="@style/AutoButton"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/NewFare"
        android:layout_alignStart="@+id/NewFare"
        android:layout_alignTop="@+id/button_kilometer"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/kilo_meters"
        android:inputType="numberDecimal"
        android:paddingLeft="4dp"
        android:textColorHint="#ffffffff"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/oldfare"
        style="@style/AutoButton"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/kilometers"
        android:layout_alignStart="@+id/kilometers"
        android:layout_alignTop="@+id/button_oldFare"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/kilo_meters"
        android:inputType="numberDecimal"
        android:paddingLeft="4dp"
        android:textColorHint="#ffffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_kilometer"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/NewFare"
        android:layout_alignRight="@+id/NewFare"
        android:layout_below="@+id/NewFare"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:onClick="CalculateKilo"
        android:padding="5dp"
        android:text="@string/button_kilo"
        android:textAllCaps="false"
        android:textColor="#ffffffff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_oldFare"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/NewFare"
        android:layout_alignRight="@+id/NewFare"
        android:layout_below="@+id/button_kilometer"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:onClick="CalculateOld"
        android:padding="5dp"
        android:text="@string/button_old"
        android:textAllCaps="false"
        android:textColor="#ffffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/NewFare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#00ffffff"
        android:text="@string/new_Fare"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fafafa" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:onClick="TrackReal"
        android:padding="5dp"
        android:text="@string/track"
        android:textAllCaps="false"
        android:textColor="#ffffffff"
        android:textSize="12sp" />

</RelativeLayout>
