<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="ran.delhiautometer.Track">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            style="@style/AutoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="StartTracking"
            android:text="@string/start"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button3"
            style="@style/AutoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="ResetMeter"
            android:text="@string/reset"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button4"
            style="@style/AutoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="CloseTracking"
            android:text="@string/close"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/track_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="2dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/distance"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/distancetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/track_out"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/track_distance"
        android:layout_alignEnd="@id/track_distance"
        android:layout_alignLeft="@id/track_distance"
        android:layout_alignRight="@id/track_distance"
        android:layout_alignStart="@id/track_distance"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/speed"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/currentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/track_out"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/track_distance"
        android:layout_alignLeft="@id/track_distance"
        android:layout_alignRight="@id/track_distance"
        android:layout_alignStart="@id/track_distance"
        android:layout_below="@id/track_distance"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/Fare"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/faretext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/track_out"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>
